[package]
name = "racetrack"
version = "0.2.0"
authors = ["Morten Lohne <lohnemorten@gmail.com>"]
edition = "2018"

[[bin]]
name = "racetrack"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board-game-traits = { git = "https://github.com/MortenLohne/board-game-traits", branch = "f-settings-type" }
pgn-traits = { git = "https://github.com/MortenLohne/pgn-traits", branch = "f-settings-type" }
tiltak = { git = "https://github.com/MortenLohne/tiltak", branch = "f-racetrack-komi" }
clap = "2.33"
chrono = "0.4.19"
log = "0.4"
fern = "0.6"