[package]
name = "racetrack"
version = "0.2.1"
authors = ["Morten Lohne <lohnemorten@gmail.com>"]
edition = "2018"

[[bin]]
name = "racetrack"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board-game-traits = "0.3.0"
pgn-traits = "0.4.0"
tiltak = { git = "https://github.com/MortenLohne/tiltak" }
clap = "4.4"
chrono = { version = "0.4", default-features = false }
log = "0.4"
fern = "0.6"
rand = { version = "0.8", features = ["small_rng"] }
bpci = "0.1.0-beta.7"
rand_distr = "0.4.3"
