[package]
name = "racetrack"
version = "0.2.1"
authors = ["Morten Lohne <lohnemorten@gmail.com>"]
edition = "2018"

[[bin]]
name = "racetrack"
path = "src/main.rs"

[features]
http = ["axum", "tokio", "serde", "tower-http", "futures", "tokio-stream", "json-patch"]
futures = ["dep:futures"]
tokio-stream = ["dep:tokio-stream"]
json-patch = ["dep:json-patch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
board-game-traits = "0.4.0"
pgn-traits = "0.5.0"
tiltak = { path = "../tiltak", features = ["serde"] }
clap = "4.4"
chrono = { version = "0.4", default-features = false }
log = "0.4"
fern = "0.6"
rand = { version = "0.8", features = ["small_rng"] }
bpci = "0.1.0-beta.7"
rand_distr = "0.4.3"
color-print = "0.3.5"
ctrlc = "3.4.2"
axum = {version = "0.8.4", features = ["macros"], optional = true }
tokio = {version = "1.47.0", features = ["rt", "sync"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
tower-http = {version = "0.6.6", features = ["cors"], optional = true }
serde_json = "1.0.141"
futures = { version = "0.3.31", optional = true }
tokio-stream = { version = "0.1.17", optional = true }
json-patch = { version = "4.0.0", optional = true }
